<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Converter</string>
    <string name="select_type">Seleziona il tipo</string>
    <string name="select_subtype">Seleziona la misura da convertire</string>
    <string name="insert_value">Valore da convertire</string>
    <string name="select_subtype_to">Seleziona la misura di destinazione</string>
	<string name="lunghezza">Lunghezza</string>
	<string name="peso">Peso</string>
	<string name="temperatura">Temperatura</string>
	<string name="clear_text">Cancella</string>
	<string name="volume">Volume</string>
	<string name="tempo">Tempo</string>
	<string name="velocità">Velocità</string>
	<string name="area">Area</string>
	<string name="angolo">Angolo</string>
	<string name="memoria">Memoria</string>
	<string name="torsione">Torsione</string>
	<string name="carburante">Carburante</string>
	<string name="basi">Basi numeriche</string>
	<string name="scambia">Scambia</string>
	<string name="copy_s">Valore copiato negli appunti</string>
	<string name="intro_add_measure">Aggiungi una nuova unità di misura al gruppo</string>
	<string name="select_unit">Seleziona il tipo di lunghezza per la conversione</string>
	<string name="test">Test</string>
	<string name="add_spiegazioni">Scrivi le formule per la conversione dall\'unità di misura selezionata. \nUsa come variabile il valore già presente. \nPuoi usare tutti gli operatori come * / + -.</string>
	<string name="insert_name">Inserisci il nome esteso della nuova unità di misura (es Metro). \nIl sistema non ti lascerà inserire duplicati di unità già presenti.</string>
	<string name="insert_symbol">Inserisci il simbolo (es. Metro => m)</string>
	<string name="test_formula">Il risultato della formula per xx è:</string>
	<string name="test_formula_err">Errore! Riesco a capire la formula solo fino a \&quot;xx\&quot;</string>
	<string name="formule_corrette">Corretto! Le formule sono una l\'inversa dell\'altra.</string>
	<string name="formule_scorrette">Errore! Le formule non sono una l\'inversa dell\'altra.</string>
	<string name="salva">Salva</string>
	<string name="delete_x_from_first">Errore! Hai cancellato la variabile x dalla prima formula.</string>
	<string name="delete_x_from_second">Errore! Hai cancellato la variabile x dalla seconda formula.</string>
	<string name="GRUPPI">10</string>
	<string name="salvataggio_ok">Salvataggio riuscito! </string>
	<string name="salvataggio_errore">Errore nel salvataggio!</string>
	<string name="cancellazione_ok">Cancellazione riuscita! </string>
	<string name="cancellazione_errore">Errore nella cancellazione!</string>
	<string name="edit_misure">Gestore misure</string>
	<string name="send_your_measures">Mandami le tue misure</string>
	<string name="preferenze">Preferenze</string>
	<string name="show_hide">Mostra / Nascondi unità di misura</string>
	<string name="edit_personali">Modifica le tue unità di misura personali</string>
	<string name="del_personali">Cancella una delle tue unità di misura personali</string>
	<string name="select_show">Scegli quali misure mostrare</string>
	<string name="select_edit">Scegli quali misure modificare</string>
	<string name="separator">" - "</string>
	<string name="select_delete">Scegli quali misure eliminare</string>
	<string name="are_you_sure">Sei sicuro di voler cancellare questa unità di misura? \n</string>
	<string name="nome_u">Nome: </string>
	<string name="simbolo_u">Simbolo: </string>
	<string name="delete">Eliminazione</string>
	<string name="no">No</string>
	<string name="yes">Si</string>
	<string name="o0">Alfabetico crescente</string>
	<string name="o1">Alfabetico decrescente</string>
	<string name="o2">Numerico crescente</string>
	<string name="o3">Numerico decrescente</string>
	<string name="formKey">dG5uRzJqMFhlWXJWWWpQNC1jTVNEM2c6MQ</string>
	<string name="modi_ordinamento">4</string>
	<string name="preferenze_o">Preferenze di ordinamento</string>
	<string name="select_type_to_send">Seleziona quali vuoi inviare</string>
	<string name="next">Avanti</string>
	<string name="save_edit">Salva le modifiche</string>
	<string name="error_exceed_sharing">Errore! Hai superato il numero massimo di invii giornalieri</string>
	<string name="send_ok">Invio riuscito!</string>
	<string name="error_sending">Errore! Non sono riuscito a inviare il report</string>
	<string name="no_internet">Errore! Per poter condividere le tue unità di misura devi essere connesso a internet</string>
	<string name="subject">Nuove misure</string>
	<string name="error_no_selection">Errore! Seleziona almeno un elemento</string>
	<string name="crash_toast_text">Ooooops! Ho conseguito un errore critico, ma ho mandato un report al mio sviluppatore per aiutare a rimuovere il problema!</string>
</resources>